ecmascript/parser/tests/typescript-errors/tsc/es6/classDeclaration/parseClassDeclarationInStrictModeByDefaultInES6/input.ts.stderr
error: 'eval' and 'arguments' cannot be used as a binding identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/es6/classDeclaration/parseClassDeclarationInStrictModeByDefaultInES6/input.ts:5:16
  |
5 |     public foo(arguments: any) { }
  |                ^^^^^^^^^

error: 'eval' and 'arguments' cannot be used as a binding identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/es6/classDeclaration/parseClassDeclarationInStrictModeByDefaultInES6/input.ts:6:17
  |
6 |     private bar(eval:any) {
  |                 ^^^^

error: Invalid use of 'arguments' in strict mode
 --> $DIR/tests/typescript-errors/tsc/es6/classDeclaration/parseClassDeclarationInStrictModeByDefaultInES6/input.ts:7:9
  |
7 |         arguments = "hello";
  |         ^^^^^^^^^

